<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tweets</string>
    <string name="login_label">Login with Twitter</string>
    <string name="title_activity_timeline">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_compose">Compose</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_compose">Compose Tweet</string>
    <string name="action_settings">Settings</string>
    <string name="hint_whats_happening">What\'s happening?</string>
    <string name="title_activity_tweet_details">Tweet</string>
    <string name="title_activity_profile">Profile</string>
    <string name="tweet_button_label">Tweet</string>
    <string name="count_tweets">TWEETS</string>
    <string name="count_following">FOLLOWING</string>
    <string name="count_followers">FOLLOWERS</string>
    <string name="count_retweets">RETWEETS</string>
    <string name="count_favorites">FAVORITES</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Twitter</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_users_list">UsersListActivity</string>
    <string name="title_following">Following</string>
    <string name="title_followers">Followers</string>

</resources>