<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codepath.apps.mysimpletweets.activities.TimelineActivity">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/ic_action_compose"
        android:orderInCategory="100"
        android:title="@string/action_compose"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        android:onClick="onProfileView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        android:onClick="onLogout"
        app:showAsAction="always" />
</menu>
